styles/style.css
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  text-decoration: none;
  list-style: none;
}
.container{
  max-width: 1440px;
  margin: auto;
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 10px;
}
.header-logo{
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 80px;
}
.logo{
  color: #000;
  font-family: 'Manrope', sans-serif;
  font-size: 35px;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
  padding-left: 35px;
}
.self-service{
  color: #000;
  font-family: Manrope;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
  cursor: pointer;
}
.content-underline p::after{
  display: block;
  content: "";
  width: 20px;
  height: 1.5px;
  background: #000;
  transition: 1s ease-in-out;
}
.content-underline p:hover::after{
  width: 70%;
}
.header-content{
  display: flex;
  justify-content: space-between;
}
.nav-link{
  display: flex;
  justify-content: space-between;
  writing-mode:vertical-rl;
  height: 340px;
  transform: scale(-1, -1);
}
.nav-link a{
  color: #000;
  font-family: Manrope;
  font-size: 16px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
  display: block;
}
.main-content{
  margin: auto;
  display: flex;
}
.main-content h1{
  color: #000;
  text-align: center;
  font-family: 'DotGothic16', sans-serif;
  font-size: 44px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  padding-right: 15px;
  border-right:  solid black; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: 6.6px; /*.15em*/
  animation: 
    typing 3.5s steps(30, end),
    blink-caret 1s step-end infinite;
}

.switch-mode{
  display: flex;
  justify-content: space-between;
  writing-mode:vertical-rl;
  height: 340px;
  transform: scale(-1, -1);
  color: #000;
  font-family: Manrope;
  font-size: 20px;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
}

.nav-content-underline a::after{
  display: block;
  content: "";
  background: #000;
  transition: 0.7s ease-in-out;
  width: 1.5px;
  height: 0%;
}
.nav-content-underline a:hover:after{
  height: 70%;
}

.hr-line{
  display: block;
  height: 1px;
  width: 100%;
  background-color: #E7E7E7;
  margin: 100px 0px;
}

.card-container{
  display: flex;
  justify-content: space-between;
}
.first-card{
  background-color:#EEE;
  width: 600px;
  height: 300px;
  margin-top: 100px;
  margin-right: 30px;
}
.second-card{
  background-color:#EEE;
  width: 600px;
  height: 300px;
  margin-top: 100px;
}

button{
  display: block;
  background-color: white;
  width: 220px;
  height: 30px;
  text-align: center;
  margin: auto;
  margin-top: 120px;
  color: #1F1F1F;
  font-family: Manrope;
  font-size: 18px;
  font-weight: 400;
  line-height: normal;
  border: 1.5px solid black;
  transition: .7s;
  border-radius: 15px;

  &:hover{
    cursor: pointer;
    background-color: black;
    color: white;
  }
}

#card-container {
  width: 100%;
  justify-content: space-between;
  display: none;
  opacity: 0;
}

#card-container.is-visible {
  display: flex;
  justify-content: space-between;
  animation: fadeInFromNone 0.5s ease-in-out;
  animation-fill-mode: forwards;
}

#card-container.is-hidden {
  animation: fadeOutFromBlock 0.5s ease-in-out;
}
.burger-menu-unactive{
  width: 40px;
  height: 28px;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  display: none;
}
.burger-line{
  background-color: #000;
  width: 100%;
  position: absolute;
  height: 3px;
}
.burger-line-first{
  top: 0;
  transition: .3s linear;
}
.burger-line-second, .burger-line-third{
  top: 50%;
  transform: translateY(-50%);
  transition: .3s linear;
}
.burger-line-fourth{
  bottom: 0;
  transition: .3s linear;
}

.burger-menu-active{
  .burger-line-first{
    opacity: 0;
  }
  .burger-line-fourth{
    opacity: 0;
  }
  .burger-line-second{
    transform: translateY(-50%) rotate(45deg);
  }
  .burger-line-third{
    transform: translateY(-50%) rotate(-45deg);
  }
}

.navbar-burger-unactive {
  text-align: right;
  width: 100%;
	height: 100%;
	transform: translateX(100%);
  margin-top: 5px;
	transition: transform 0.5s; 
}

.navbar-burger-active {
	transform: translateX(0);
}
.nav-links-burger{
  display: flex;
  flex-direction: column-reverse;
}
.nav-links-burger li{
  margin-top: 10px;
}
.nav-links-burger li a{
  font-weight: 100;
  font-size: 25px;
  color: #000;
  font-family: Manrope;

  &:hover{
    transition: .4s;
    text-shadow: 0 0 .70px black;
  }
}

@keyframes fadeInFromNone {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOutFromBlock {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes typing{
  from { width: 0 }
  to { width: 100% }
}
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: black }
}

/*Media Queries*/
@media (max-width: 961px) {
  .card-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-between;
  }
  #card-container.is-visible{
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-between;
  }
  .first-card{
    margin-right: 0px;
  }
  .nav, .main-content, .self-service-hide{
    display: none;
  }
  .burger-menu-unactive{

    display: block;
  }
  .logo{
    padding-left: 0px;
  }
  .container{
    padding-left: 15px;
    padding-right: 15px;
  }
  .header-logo{
    margin-bottom: 0px;
  }
}
@media (min-width: 961px){
  .navbar-burger-unactive{
    display: none;
  }
}

